fix attribution control position when has-sidebar on small screens (i.e. when the sidebar at the bottom not on the side)

--- a/frontend/js/maps.css
+++ b/frontend/js/maps.css
@@ -206,3 +206,13 @@ body.dark-mode .maplibregl-ctrl-group {
 .big-map .maplibregl-ctrl-bottom-right {
   bottom: 100px;
 }
+
+.has-sidebar .maplibregl-ctrl-bottom-right {
+  bottom: 0;
+}
+
+@media screen and (min-width: 48em) {
+  .has-sidebar .maplibregl-ctrl-bottom-right {
+    bottom: 100px;
+  }
+}
